spade-tests/src/snapshots/spade_tests__integration__trait_tests__tuple_has_no_methods.snap
---
source: spade-tests/src/integration.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: (bool, bool) does not have any methods
  ┌─ testinput:1:32
  │
1 │ fn a(x: (bool, bool)) -> bool {x.test()}
  │                                ^^^^^^^^


